<?xml version="1.0"?>
<package>
  <name>ball_tracker</name>
  <version>0.0.0</version>
  <description>
      The ball_tracker package: Tracks a circular object from one of
      twelve colors. Publish a message with the position of the center
      of the object and the size of the captured frame.

  </description>

  <maintainer email="juanmanuel@todo.todo">juanmanuel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
